meta-radxa: Add COPYING.MIT and updated conf README documentation files
- Added standard MIT license text as COPYING.MIT
- Documented usage, features, and layer structure in README.md
- Clarified usage flow with setup script and supported targets

Signed-off-by: AidenPearce1918 <prasannakrishnanpk@gmail.com>

--- a/conf/distro/radxa.conf
+++ b/conf/distro/radxa.conf
@@ -1,1 +1,7 @@
+# --- File: meta-radxa/conf/distro/radxa.conf ---
+# Basic Radxa distribution configuration
+DISTRO_NAME = "Radxa Custom Distro"
+DISTRO_VERSION = "1.0"
+DISTRO_MAINTAINER = "Your Name <you@example.com>"
 
+# Add any distro-specific overrides or variables below
