--- a/conf/templates/bblayers.conf.sample
+++ b/conf/templates/bblayers.conf.sample
@@ -1,6 +1,6 @@
 # --- File: meta-radxa/conf/templates/bblayers.conf.sample ---
 # Template bblayers.conf for reference
-LCONF_VERSION = "8"
+LCONF_VERSION = "7"
 
 BBPATH = "${TOPDIR}"
 BBFILES ?= ""
@@ -10,6 +10,7 @@ BBLAYERS ?= " \
   ${TOPDIR}/../poky/meta-poky \
   ${TOPDIR}/../poky/meta-yocto-bsp \
   ${TOPDIR}/../meta-rockchip \
+  ${TOPDIR}/../meta-radxa \
   ${TOPDIR}/../meta-arm/meta-arm \
   ${TOPDIR}/../meta-arm/meta-arm-toolchain \
 "
