--- a/conf/templates/local.conf.sample
+++ b/conf/templates/local.conf.sample
@@ -1,11 +1,10 @@
 # Local configuration for Yocto builds
-include conf/distro/radxa.conf
 
 MACHINE ??= "radxa"
 DISTRO ?= "radxa"
 PACKAGE_CLASSES ?= "package_rpm"
 EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
-USER_CLASSES ?= "buildstats image-mklibs image-prelink"
+USER_CLASSES ?= "buildstats "
 DL_DIR ?= "${TOPDIR}/downloads"
 SSTATE_DIR ?= "${TOPDIR}/sstate-cache"
 TMPDIR ?= "${TOPDIR}/tmp"
